# chris_ros_turtlebot

./: README.md
chris_ros_turtlebot/: CHANGELOG.rst  CMakeLists.txt  package.xml
chris_turtlebot_bringup/: CMakeLists.txt  package.xml
chris_turtlebot_bringup/launch/: chris_cmd_vel_mux.launch  chris_fake_localization.launch  chris_hokuyo_bringup.launch  chris_joystick_teleop.launch  chris_keyboard_teleop.launch  chris_kinect_bringup.launch  chris_kinect_standalone_bringup.launch  chris_realsense_bringup.launch  chris_teleop_control.launch  chris_turtlebot_bringup.launch  chris_turtlebot_gazebo.launch  chris_turtlebot_node.launch  chris_turtlebot_record.launch  chris_turtlebot_rviz.launch  chris_ydlidar_bringup.launch  gazebo_two_turtlebots.launch
chris_turtlebot_bringup/param/: diagnostics.yaml  laser_filters.yaml  mux.yaml  tbot0.rviz  tbot1.rviz  turtlebot.rviz
chris_turtlebot_bumper2pc/: CHANGELOG.rst  CMakeLists.txt  frames.gv  package.xml
chris_turtlebot_bumper2pc/include/chris_turtlebot_bumper2pc/: chris_turtlebot_bumper2pc.hpp
chris_turtlebot_bumper2pc/launch/: standalone.launch
chris_turtlebot_bumper2pc/plugins/: nodelet_plugins.xml
chris_turtlebot_bumper2pc/src/: chris_turtlebot_bumper2pc.cpp
chris_turtlebot_dashboard/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
chris_turtlebot_dashboard/launch/: chris_turtlebot_dashboard.launch
chris_turtlebot_dashboard/plugins/: plugin.xml
chris_turtlebot_dashboard/scripts/: chris_turtlebot_dashboard
chris_turtlebot_dashboard/src/chris_turtlebot_dashboard/: battery_widget.py  dashboard.py  monitor_dash_widget.py
chris_turtlebot_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
chris_turtlebot_model/include/chris_turtlebot_model/: gazebo_ros_kobuki.h
chris_turtlebot_model/launch/: gazebo_corridors_world.launch  gazebo_empty_world.launch  gazebo_simple_creech_world.launch  gazebo_willow_world.launch
chris_turtlebot_model/robots/: chris_turtlebot.urdf.xacro
chris_turtlebot_model/src/: gazebo_ros_kobuki.cpp  gazebo_ros_kobuki_loads.cpp  gazebo_ros_kobuki_updates.cpp
chris_turtlebot_model/urdf/: hokuyo_urg04.urdf.xacro  hokuyo_urg04_gazebo.urdf.xacro  kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
