<package>
  <name>chris_ros_turtlebot</name>
  <version>0.0.1</version>
  <description>
    Meta-package for CNU Robotics Turtlebot Setup
  </description>
  <author>David Conner</author>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/CNURobotics/chris_ros_turtlebot/issues</url>
  <url type="repository">https://github.com/CNURobotics/chris_ros_turtlebot</url>
  <url type="website">https://github.com/CNURobotics/chris_ros_turtlebot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>chris_turtlebot_bringup</run_depend>
  <run_depend>chris_turtlebot_model</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
