<package format="2">
  <name>chris_turtlebot_model</name>
  <version>0.2.0</version>
  <description>URDF and ROS plugins for Gazebo for the CNU Robotics CHRISLab Turtlebot configuration</description>
  <maintainer email="david.conner@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CNURobotics/chris_ros_turtlebot</url>
  <url type="repository">https://github.com/CNURobotics/chris_ros_turtlebot</url>
  <url type="bugtracker">https://github.com/CNURobotics/chris_ros_turtlebot/issues</url>
  <author>David Conner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>turtlebot_description</depend>
  <depend>kobuki_description</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>kobuki_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

</package>
